cealdemo/tests/neg2/173.gold
Error: (line 3:5 'a') (line 3:3 'a') Label has been defined
