cealdemo/tests/neg2/173.sct
# repeating labels
a (-1) (-1)
. a:a:a:a:'a'
